--- a/package.json
+++ b/package.json
@@ -6,15 +6,15 @@
     "@testing-library/jest-dom": "^5.15.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
-    "axios": "^0.24.0",
-    "bootstrap": "^5.1.3",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "axios": "^1.6.3",
+    "bootstrap": "^5.3.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-infinite-scroll-component": "^6.1.0",
-    "react-redux": "^7.2.6",
+    "react-redux": "^7.2.9",
     "react-router": "^6.0.2",
-    "react-router-dom": "^6.0.2",
-    "react-scripts": "4.0.3",
+    "react-router-dom": "^6.15.0",
+    "react-scripts": "^5.0.1",
     "redux-devtools-extension": "^2.13.9",
     "web-vitals": "^1.1.2"
   },
